// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schedule behavior with cron 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"root_Schedule_85A4458B\\": {
        \\"is_enabled\\": true,
        \\"schedule_expression\\": \\"cron(0/1 * ? * * *)\\"
      }
    },
    \\"aws_cloudwatch_event_target\\": {
      \\"root_Schedule_ScheduleTargetc5395e41_EB088B9D\\": {
        \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.qualified_arn}\\",
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.name}\\"
      }
    },
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTickc5395e41_IamRole_D42951B2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicy_A7C7B01B\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicyAttachment_4D7CDBC7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTickc5395e41_49F0E4B8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.arn}\\",
        \\"runtime\\": \\"nodejs18.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTickc5395e41_S3Object_DE498BA0.key}\\",
        \\"timeout\\": 30,
        \\"vpc_config\\": {
          \\"security_group_ids\\": [],
          \\"subnet_ids\\": []
        }
      }
    },
    \\"aws_lambda_permission\\": {
      \\"root_ScheduleOnTickc5395e41_InvokePermissionc8b3fc394731d07e61c00e422c6b234372c09bc3b3_F99D1602\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.function_name}\\",
        \\"principal\\": \\"events.amazonaws.com\\",
        \\"qualifier\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.version}\\",
        \\"source_arn\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.arn}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Code_02F3C603\\": {
        \\"bucket_prefix\\": \\"code-c84a50b1-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTickc5395e41_S3Object_DE498BA0\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`schedule behavior with cron 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.2",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Schedule": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventRule.CloudwatchEventRule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "ScheduleTarget-c5395e41": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventTarget.CloudwatchEventTarget",
                      "version": "12.0.2",
                    },
                    "id": "ScheduleTarget-c5395e41",
                    "path": "root/Default/Schedule/ScheduleTarget-c5395e41",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Asset",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                      "version": "12.0.2",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-c5395e41/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-c5395e41/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-c5395e41",
                "path": "root/Default/Schedule-OnTick-c5395e41",
              },
              "Schedule-OnTickHandler-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "hidden": true,
                },
                "id": "Schedule-OnTickHandler-c5395e41",
                "path": "root/Default/Schedule-OnTickHandler-c5395e41",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule behavior with rate 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"root_Schedule_85A4458B\\": {
        \\"is_enabled\\": true,
        \\"schedule_expression\\": \\"rate(2 minutes)\\"
      }
    },
    \\"aws_cloudwatch_event_target\\": {
      \\"root_Schedule_ScheduleTargetc5395e41_EB088B9D\\": {
        \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.qualified_arn}\\",
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.name}\\"
      }
    },
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTickc5395e41_IamRole_D42951B2\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicy_A7C7B01B\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTickc5395e41_IamRolePolicyAttachment_4D7CDBC7\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTickc5395e41_49F0E4B8\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-c5395e41-c861b8f8\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTickc5395e41_IamRole_D42951B2.arn}\\",
        \\"runtime\\": \\"nodejs18.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTickc5395e41_S3Object_DE498BA0.key}\\",
        \\"timeout\\": 30,
        \\"vpc_config\\": {
          \\"security_group_ids\\": [],
          \\"subnet_ids\\": []
        }
      }
    },
    \\"aws_lambda_permission\\": {
      \\"root_ScheduleOnTickc5395e41_InvokePermissionc8b3fc394731d07e61c00e422c6b234372c09bc3b3_F99D1602\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.function_name}\\",
        \\"principal\\": \\"events.amazonaws.com\\",
        \\"qualifier\\": \\"\${aws_lambda_function.root_ScheduleOnTickc5395e41_49F0E4B8.version}\\",
        \\"source_arn\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.arn}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Code_02F3C603\\": {
        \\"bucket_prefix\\": \\"code-c84a50b1-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTickc5395e41_S3Object_DE498BA0\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`schedule behavior with rate 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.2",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Handler": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler",
                "path": "root/Default/Handler",
              },
              "Schedule": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-c5395e41",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventRule.CloudwatchEventRule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "ScheduleTarget-c5395e41": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventTarget.CloudwatchEventTarget",
                      "version": "12.0.2",
                    },
                    "id": "ScheduleTarget-c5395e41",
                    "path": "root/Default/Schedule/ScheduleTarget-c5395e41",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler",
                    },
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Asset",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-c5395e41/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-c5395e41/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                      "version": "12.0.2",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-c5395e41/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-c5395e41/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-c5395e41",
                "path": "root/Default/Schedule-OnTick-c5395e41",
              },
              "Schedule-OnTickHandler-c5395e41": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "hidden": true,
                },
                "id": "Schedule-OnTickHandler-c5395e41",
                "path": "root/Default/Schedule-OnTickHandler-c5395e41",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`schedule with two functions 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  },
  \\"resource\\": {
    \\"aws_cloudwatch_event_rule\\": {
      \\"root_Schedule_85A4458B\\": {
        \\"is_enabled\\": true,
        \\"schedule_expression\\": \\"cron(0/1 * ? * * *)\\"
      }
    },
    \\"aws_cloudwatch_event_target\\": {
      \\"root_Schedule_ScheduleTarget0a615500_EF87C5A1\\": {
        \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTick0a615500_9EB460BE.qualified_arn}\\",
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.name}\\"
      },
      \\"root_Schedule_ScheduleTarget7b33bcba_603EC18D\\": {
        \\"arn\\": \\"\${aws_lambda_function.root_ScheduleOnTick7b33bcba_F513E6E2.qualified_arn}\\",
        \\"rule\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.name}\\"
      }
    },
    \\"aws_iam_role\\": {
      \\"root_ScheduleOnTick0a615500_IamRole_CDDD9C52\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_IamRole_02FDC318\\": {
        \\"assume_role_policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Action\\\\\\":\\\\\\"sts:AssumeRole\\\\\\",\\\\\\"Principal\\\\\\":{\\\\\\"Service\\\\\\":\\\\\\"lambda.amazonaws.com\\\\\\"},\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\"}]}\\"
      }
    },
    \\"aws_iam_role_policy\\": {
      \\"root_ScheduleOnTick0a615500_IamRolePolicy_3DA1DADC\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick0a615500_IamRole_CDDD9C52.name}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_IamRolePolicy_DB491429\\": {
        \\"policy\\": \\"{\\\\\\"Version\\\\\\":\\\\\\"2012-10-17\\\\\\",\\\\\\"Statement\\\\\\":[{\\\\\\"Effect\\\\\\":\\\\\\"Allow\\\\\\",\\\\\\"Action\\\\\\":\\\\\\"none:null\\\\\\",\\\\\\"Resource\\\\\\":\\\\\\"*\\\\\\"}]}\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick7b33bcba_IamRole_02FDC318.name}\\"
      }
    },
    \\"aws_iam_role_policy_attachment\\": {
      \\"root_ScheduleOnTick0a615500_IamRolePolicyAttachment_9B786B92\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick0a615500_IamRole_CDDD9C52.name}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_IamRolePolicyAttachment_8D42B8DE\\": {
        \\"policy_arn\\": \\"arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole\\",
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick7b33bcba_IamRole_02FDC318.name}\\"
      }
    },
    \\"aws_lambda_function\\": {
      \\"root_ScheduleOnTick0a615500_9EB460BE\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-0a615500-c8fd8480\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-0a615500-c8fd8480\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick0a615500_IamRole_CDDD9C52.arn}\\",
        \\"runtime\\": \\"nodejs18.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTick0a615500_S3Object_EB395932.key}\\",
        \\"timeout\\": 30,
        \\"vpc_config\\": {
          \\"security_group_ids\\": [],
          \\"subnet_ids\\": []
        }
      },
      \\"root_ScheduleOnTick7b33bcba_F513E6E2\\": {
        \\"environment\\": {
          \\"variables\\": {
            \\"WING_FUNCTION_NAME\\": \\"Schedule-OnTick-7b33bcba-c86000d7\\"
          }
        },
        \\"function_name\\": \\"Schedule-OnTick-7b33bcba-c86000d7\\",
        \\"handler\\": \\"index.handler\\",
        \\"publish\\": true,
        \\"role\\": \\"\${aws_iam_role.root_ScheduleOnTick7b33bcba_IamRole_02FDC318.arn}\\",
        \\"runtime\\": \\"nodejs18.x\\",
        \\"s3_bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"s3_key\\": \\"\${aws_s3_object.root_ScheduleOnTick7b33bcba_S3Object_4D569B28.key}\\",
        \\"timeout\\": 30,
        \\"vpc_config\\": {
          \\"security_group_ids\\": [],
          \\"subnet_ids\\": []
        }
      }
    },
    \\"aws_lambda_permission\\": {
      \\"root_ScheduleOnTick0a615500_InvokePermissionc8b3fc394731d07e61c00e422c6b234372c09bc3b3_736F0312\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_ScheduleOnTick0a615500_9EB460BE.function_name}\\",
        \\"principal\\": \\"events.amazonaws.com\\",
        \\"qualifier\\": \\"\${aws_lambda_function.root_ScheduleOnTick0a615500_9EB460BE.version}\\",
        \\"source_arn\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.arn}\\"
      },
      \\"root_ScheduleOnTick7b33bcba_InvokePermissionc8b3fc394731d07e61c00e422c6b234372c09bc3b3_AF955746\\": {
        \\"action\\": \\"lambda:InvokeFunction\\",
        \\"function_name\\": \\"\${aws_lambda_function.root_ScheduleOnTick7b33bcba_F513E6E2.function_name}\\",
        \\"principal\\": \\"events.amazonaws.com\\",
        \\"qualifier\\": \\"\${aws_lambda_function.root_ScheduleOnTick7b33bcba_F513E6E2.version}\\",
        \\"source_arn\\": \\"\${aws_cloudwatch_event_rule.root_Schedule_85A4458B.arn}\\"
      }
    },
    \\"aws_s3_bucket\\": {
      \\"root_Code_02F3C603\\": {
        \\"bucket_prefix\\": \\"code-c84a50b1-\\"
      }
    },
    \\"aws_s3_object\\": {
      \\"root_ScheduleOnTick0a615500_S3Object_EB395932\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      },
      \\"root_ScheduleOnTick7b33bcba_S3Object_4D569B28\\": {
        \\"bucket\\": \\"\${aws_s3_bucket.root_Code_02F3C603.bucket}\\",
        \\"key\\": \\"<key>\\",
        \\"source\\": \\"<source>\\"
      }
    }
  }
}"
`;

exports[`schedule with two functions 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Code": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.s3Bucket.S3Bucket",
                  "version": "12.0.2",
                },
                "id": "Code",
                "path": "root/Default/Code",
              },
              "Handler1": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-7b33bcba",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler1",
                "path": "root/Default/Handler1",
              },
              "Handler2": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Schedule-OnTick-0a615500",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "An inflight resource",
                  "hidden": true,
                  "title": "Inflight",
                },
                "id": "Handler2",
                "path": "root/Default/Handler2",
              },
              "Schedule": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-7b33bcba",
                    },
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule-OnTick-0a615500",
                    },
                  ],
                  "wing:resource:stateful": true,
                },
                "children": {
                  "Schedule": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventRule.CloudwatchEventRule",
                      "version": "12.0.2",
                    },
                    "id": "Schedule",
                    "path": "root/Default/Schedule/Schedule",
                  },
                  "ScheduleTarget-0a615500": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventTarget.CloudwatchEventTarget",
                      "version": "12.0.2",
                    },
                    "id": "ScheduleTarget-0a615500",
                    "path": "root/Default/Schedule/ScheduleTarget-0a615500",
                  },
                  "ScheduleTarget-7b33bcba": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.cloudwatchEventTarget.CloudwatchEventTarget",
                      "version": "12.0.2",
                    },
                    "id": "ScheduleTarget-7b33bcba",
                    "path": "root/Default/Schedule/ScheduleTarget-7b33bcba",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud schedule to trigger events at regular intervals",
                  "title": "Schedule",
                },
                "id": "Schedule",
                "path": "root/Default/Schedule",
              },
              "Schedule-OnTick-0a615500": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler2",
                    },
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-0a615500/Asset",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-0a615500/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-0a615500/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-0a615500/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-0a615500/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                      "version": "12.0.2",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-0a615500/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-0a615500/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-0a615500",
                "path": "root/Default/Schedule-OnTick-0a615500",
              },
              "Schedule-OnTick-7b33bcba": {
                "attributes": {
                  "wing:resource:connections": [
                    {
                      "direction": "outbound",
                      "implicit": false,
                      "relationship": "handle",
                      "resource": "root/Default/Handler1",
                    },
                    {
                      "direction": "inbound",
                      "implicit": false,
                      "relationship": "on_tick",
                      "resource": "root/Default/Schedule",
                    },
                  ],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "Asset": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformAsset",
                      "version": "0.15.2",
                    },
                    "id": "Asset",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/Asset",
                  },
                  "Default": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaFunction.LambdaFunction",
                      "version": "12.0.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/Default",
                  },
                  "IamRole": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRole.IamRole",
                      "version": "12.0.2",
                    },
                    "id": "IamRole",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/IamRole",
                  },
                  "IamRolePolicy": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicy.IamRolePolicy",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicy",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/IamRolePolicy",
                  },
                  "IamRolePolicyAttachment": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.iamRolePolicyAttachment.IamRolePolicyAttachment",
                      "version": "12.0.2",
                    },
                    "id": "IamRolePolicyAttachment",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/IamRolePolicyAttachment",
                  },
                  "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.lambdaPermission.LambdaPermission",
                      "version": "12.0.2",
                    },
                    "id": "InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/InvokePermission-c8b3fc394731d07e61c00e422c6b234372c09bc3b3",
                  },
                  "S3Object": {
                    "constructInfo": {
                      "fqn": "@cdktf/provider-aws.s3Object.S3Object",
                      "version": "12.0.2",
                    },
                    "id": "S3Object",
                    "path": "root/Default/Schedule-OnTick-7b33bcba/S3Object",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud function (FaaS)",
                  "title": "Function",
                },
                "id": "Schedule-OnTick-7b33bcba",
                "path": "root/Default/Schedule-OnTick-7b33bcba",
              },
              "Schedule-OnTickHandler-0a615500": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "hidden": true,
                },
                "id": "Schedule-OnTickHandler-0a615500",
                "path": "root/Default/Schedule-OnTickHandler-0a615500",
              },
              "Schedule-OnTickHandler-7b33bcba": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "hidden": true,
                },
                "id": "Schedule-OnTickHandler-7b33bcba",
                "path": "root/Default/Schedule-OnTickHandler-7b33bcba",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "@cdktf/provider-aws.provider.AwsProvider",
                  "version": "12.0.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                  "wing:resource:stateful": false,
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
